# yashigani

./: .bandit  .claude_agent_addendum.txt  .cr.yaml  .dockerignore  .env.example  .gitignore  .hadolint.yaml  AI_ASSETS.md  Architecture.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  PRIVACY_POLICY.md  README.md  SECURITY.md  alembic.ini  install.sh  pyproject.toml  requirements-kms.txt  requirements-phase2.txt  restore.sh  sonar-project.properties  uninstall.sh  update.sh
.github/: CODEOWNERS  agent-image-scan-allowlist.json  branch-protection.md  dependabot.yml
.github/workflows/: agent-dispatch-e2e.yml  agent-image-component-scan.yml  build-push.yml  caddy-family-parity.yml  ci.yml  deploy.yml  helm-dry-run-server-gate.yml  helm-release.yml  install-smoke.yml  public-doc-hygiene.yml  release.yml  security.yml  tag-sign.yml
airgap/: manifest.yml
bundles/: filesystem-mcp.yaml  git-mcp.yaml
config/: alertmanager.yml  logging.json  prometheus-web-config.yml  prometheus.yml  prometheus_alerts.yml
config/jaeger/: jaeger.yml
config/loki/: loki.yml
config/otel/: otel-collector.yml
config/promtail/: promtail.yml
data/fasttext/: test_data.txt  training_data.txt
docker/: .env.example  .env.test-idp  Caddyfile.acme  Caddyfile.ca  Caddyfile.selfsigned  Dockerfile.backoffice  Dockerfile.filesystem-mcp  Dockerfile.gateway  Dockerfile.git-mcp  backoffice-start.sh  docker-compose.gpu-podman.yml  docker-compose.podman-override.yml  docker-compose.podman-virtiofs-override.yml  docker-compose.release.yml  docker-compose.wazuh.yml  docker-compose.yml  gateway-start.sh  service_identities.yaml
docker/apparmor/: yashigani-gateway
docker/caddy/: Caddyfile.waf  Dockerfile.caddy  caddy-entrypoint.sh
docker/keycloak/: yashigani-test-realm.json
docker/openclaw/: openclaw.json
docker/pgbouncer/: pgbouncer-letta.ini  pgbouncer.ini
docker/postgres/: 05-enable-ssl.sh  10-pgbouncer-auth.sh  init-agent-dbs.sh  init-langgraph-db.sh
docker/ringfence-init/: Dockerfile  README.md  ringfence-init.sh
docker/seccomp/: yashigani-gateway.json  yashigani.json
docker/wazuh-patch/: 0-wazuh-init  opensearch_dashboards.yml
docs/: 2251-remaining-hardening.md  PLAN_v0.4.0.md  PLAN_v0.5.0.md  PLAN_v0.6.0.md  PLAN_v0.6.1.md  PLAN_v0.6.2.md  PLAN_v0.7.0.md  PLAN_v0.7.1.md  PLAN_v0.8.0.md  QA_REPORT.md  access_control_policy.md  business_continuity_plan.md  byo-ca-runbook.md  change_management.md  ci-secrets.md  data_handling_procedures.md  disaster_recovery.md  helm-vs-compose-parity.md  incident_response_plan.md  kubernetes_deployment.md  opa_manual.md  operator-guide.md  podman_deployment.md  preflight_check.md  release-process.md  release-signing-key.pub  risk-register.yml  risk_management_framework.md  shell-interpolation-discipline.md  supplier_security.md  wazuh-linux-docker29-fixes.md  yashigani_install_config.md  yashigani_objectives.md  yashigani_owasp.md  yashigani_v0.1.0_documentation.md  yashigani_v0.2.0_plan.md  yashigani_v0.3.0_plan.md
docs/api/: admin-api.md
docs/compliance/: README.md  eu_ai_act.md  fedramp_moderate.md  hipaa_security.md  infrastructure.md  iso_27001_2022.md  nist_800_53_moderate.md  owasp_agentic_ai.md  owasp_api_security.md  owasp_asvs_v5.md  pci_dss_v4.md  soc2_type2.md
docs/compliance-reports/: README.md  aggregate.md
docs/development/: service_identities.md
docs/operations/: backup.md  fips-deployment.md  upgrade.md
docs/release-notes/: v2.23.2.1.md  v2.23.2.md  v2.23.3.md
docs/security/: agent-image-scanning.md  audit-db-least-privilege.md  authentication.md  bopla-allowlist.md  hsts-preload-operator-guidance.md  inactive-account-disable.md  release-signing.md  sql-injection-controls.md  ssrf.md  xff-trust-boundary.md
docs/testing/: e2e-coverage-guarantees.md
helm/: README.md
helm/environments/: production.yaml  staging.yaml
helm/yashigani/: Chart.yaml  values.release.yaml  values.yaml
lib/: detect_runtime.sh  pki_ownership.sh  pki_ownership_append.py  yashigani-fips.sh
models/: README.txt
opengrep-rules/pki/: libssl-intermediate-anchor.yml
policy/: agents.rego  agents_test.rego  mcp-input.schema.json  mcp.rego  mcp_test.rego  rbac.rego  v1_routing.rego  v1_routing_test.rego  yashigani.rego
policy/data/: rbac_data.json
scripts/: _asvs_v13_v17.py  _asvs_v1_v4.py  _asvs_v5_v8.py  _asvs_v9_v12.py  archive_ci_artifacts.sh  audit_verify.py  benchmark_fasttext.py  bootstrap_postgres.py  build-filesystem-mcp.sh  build-git-mcp.sh  check-preflight.sh  deploy-vm.sh  detect-platform.sh  generate_sbom.py  generate_training_data.py  health-check.sh  import-kms-secrets.sh  init-openwebui-agents.py  install-cert-manager.sh  install-runtime.sh  k8s-install.sh  k8s-restore-validate.sh  keygen.py  lint_compose_command_vars.sh  lint_sudo_pattern.sh  lint_tmp_paths.sh  offboard.sh  owasp_prerelease_check.py  parse_trivy.py  partition_maintenance.py  platform-detect.sh  preflight.sh  redis-migrate.sh  release_gate_probe.sh  retro_compile.py  rotate-secret.sh  sign_image.sh  sign_license.py  sign_release_tag.sh  test-installer.sh  (+10 more)
src/tests/: conftest.py
src/yashigani/: __init__.py
tests/admission/: README.md  fixture-compliant.yaml  fixture-noncompliant-no-seccomp.yaml  fixture-noncompliant-privesc.yaml  fixture-noncompliant-root.yaml  run-admission-tests.sh
tests/contracts/: test_agent_base_url_port.py  test_agent_bundle_pod_labels.py  test_caddy_dockerfile_build_paths.py  test_caddy_egress_hardening.py  test_caddyfile_family.py  test_cert_mount_spiffe_enforcement.py  test_fips_env_propagation.py  test_helm_caddy_directives.py  test_helm_env_parity.py  test_helm_licensing.py  test_helm_networkpolicy_ipv6.py  test_helm_p2_council_findings.py  test_helm_p2_fix3_backup_files_get.py  test_helm_p2_wave2_findings.py  test_helm_p2_wave3_findings.py  test_install_compose_agent_backup.py  test_k8s_install_criticals.py  test_pghba_pgbouncer_cert_carveout.py  test_podman_seccomp_override.py  test_service_identities_sha.py  test_signed_encrypted_backup.py  test_uninstall_runtime_aware.py
tools/: check_partition_helm_parity.py
(+609 files in other folders)
