[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yashigani"
version = "2.1.0"
description = "Security enforcement gateway for MCP servers and agentic AI systems"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    # Auth
    "argon2-cffi>=23.1",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    "webauthn>=2.1",
    "redis>=5.0",
    # Inspection / AI
    # (Ollama is accessed via local HTTP — no SDK required)
    # KSM — base; provider extras listed in requirements-kms.txt
    "apscheduler>=3.10",
    # SSO
    "authlib>=1.3",
    "requests>=2.31",
    "python3-saml>=1.16",
    # Audit export
    "pydantic>=2.7",
    # v0.2.0 — TLS bootstrap + observability
    "bcrypt>=4.1",
    "prometheus-client>=0.20",
    # v0.5.0 — PostgreSQL, JWT, OTEL, structured logging
    "asyncpg>=0.29",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "PyJWT>=2.8",
    "cryptography>=42",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-propagator-b3>=1.24",
]

[project.optional-dependencies]
keeper  = ["keeper-secrets-manager-core>=16"]
aws     = ["boto3>=1.34"]
azure   = ["azure-keyvault-secrets>=4.8", "azure-identity>=1.17"]
gcp     = ["google-cloud-secret-manager>=2.20"]
vault   = ["hvac>=2.1"]
nvidia  = ["pynvml>=11.5"]
fasttext = ["fasttext-wheel>=0.9.2"]
cloud-inspection = [
    "anthropic>=0.25",
    "openai>=1.30",
    "google-generativeai>=0.7",
]
sbom    = ["cyclonedx-bom>=4.0"]
dev     = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",             # for FastAPI TestClient
    "coverage[toml]>=7",
    "fakeredis[aioredis]>=2.21",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"yashigani.backoffice" = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["yashigani"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
omit = [
    "*/kms/providers/keeper.py",
    "*/kms/providers/aws.py",
    "*/kms/providers/azure.py",
    "*/kms/providers/gcp.py",
    "*/inspection/backends/anthropic.py",
    "*/inspection/backends/gemini.py",
    "*/inspection/backends/azure_openai.py",
    "*/chs/gpu_monitor.py",
]

[tool.bandit]
targets = ["src/yashigani"]
skips = ["B101", "B601"]   # B101=assert, B601=paramiko (not used)
