# Last updated: 2026-05-28T00:00:00+00:00 (feat: v2.25.0 P1 W0a+W1 — ring-fence onboarding audit types + manifest parser/linter)
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yashigani"
version = "2.25.4"
description = "Security enforcement gateway for MCP servers and agentic AI systems"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    # Auth
    "argon2-cffi>=25.1",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    "webauthn>=2.1",
    "redis>=5.0",
    # Inspection / AI
    # (Ollama is accessed via local HTTP — no SDK required)
    # v2.23.3: scikit-learn replaces fasttext-wheel (archived 2024-03-22, Python ≤3.12 ABI pin).
    # Measured F1: 0.9545 (macro, 80/20 split) — PASS >= 0.90.
    "scikit-learn>=1.4",
    "joblib>=1.3",
    # KSM — base; provider extras listed in requirements-kms.txt
    "apscheduler>=3.10",
    # SSO
    "authlib>=1.6",
    "requests>=2.31",
    "python3-saml>=1.16",
    # Audit export
    "pydantic>=2.10",
    "email-validator>=2.1",   # required by pydantic v2 EmailStr; not bundled in pydantic itself
    # v2.23.1 — internal mTLS PKI manifest loader (yashigani.pki.identity)
    "PyYAML>=6",
    # v2.25.0 P1 W1 — manifest JSON-Schema validator (M8 / Laura TM-URF-026)
    # External $ref resolution disabled at validator level (P10).
    # Pin <5.0 — Draft 2020-12 API stabilised in 4.17.3; 5.x may break.
    "jsonschema>=4.17.3,<5.0",
    # v0.2.0 — TLS bootstrap + observability
    "bcrypt>=4.1",
    "prometheus-client>=0.20",
    # v0.5.0 — PostgreSQL, JWT, OTEL, structured logging
    "asyncpg>=0.29",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "PyJWT>=2.9",
    "cryptography>=42,<50",   # SIGILL on macOS Podman applehv aarch64: 47.0.0 segfaults at ec.generate_private_key() (gate Round 3, 2026-04-29); 48.0.0 was supposed to fix it but still SIGILLs on cryptography 48 + cffi 2.0.0 + OpenSSL 3.5.4 under applehv 15.7.5 (Captain audit 2026-05-11). 46.x verified working. Pinned <47 as stopgap pending Tom investigation of cffi/hazmat path on applehv aarch64 (P-10 candidate).
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-propagator-b3>=1.24",
    # Container backends for Pool Manager (per-identity isolation)
    "podman>=5.0",  # Podman SDK — primary backend on Podman deployments
    # kubernetes-client is a soft dep: only imported when running in-cluster.
    # Listed in core deps so the gateway image includes it without an extra;
    # the K8s backend gracefully falls back to Docker/Podman if import fails.
    "kubernetes>=30.1",  # K8s API backend — YSG-RISK-070
]

[project.optional-dependencies]
keeper  = ["keeper-secrets-manager-core>=16"]
aws     = ["boto3>=1.34"]
azure   = ["azure-keyvault-secrets>=4.8", "azure-identity>=1.17"]
gcp     = ["google-cloud-secret-manager>=2.20"]
vault   = ["hvac>=2.1"]
nvidia  = ["pynvml>=11.5"]
# fasttext extra removed in v2.23.3 — replaced by scikit-learn in core deps.
cloud-inspection = [
    "anthropic>=0.25",
    "openai>=1.30",
    "google-generativeai>=0.7",
]
sbom    = ["cyclonedx-bom>=4.0"]
dev     = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",             # for FastAPI TestClient
    "coverage[toml]>=7",
    "fakeredis[aioredis,lua]>=2.28",
    # lupa: Lua runtime required by fakeredis[lua] for EVAL command emulation.
    # Declared explicitly here so `pip install -e ".[dev]"` always resolves it
    # even when pip's extra-marker resolution misses transitive extras.
    # Without lupa, identity registry tests (Lua EVAL atomics) raise
    # redis.exceptions.ResponseError: unknown command 'eval'.
    "lupa>=2.4",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# v2.25.0 P1 W1 — bundled manifest schema + signing key placeholder
"yashigani.manifest" = [
    "schemas/*.json",
    "keys/*.pub",
]
"yashigani.backoffice" = [
    "templates/*.html",
    "static/css/*.css",
    "static/js/*.js",
    "static/swagger-ui/*.js",
    "static/swagger-ui/*.css",
]
"yashigani.gateway" = [
    "static/swagger-ui/*.js",
    "static/swagger-ui/*.css",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["yashigani"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
omit = [
    "*/kms/providers/keeper.py",
    "*/kms/providers/aws.py",
    "*/kms/providers/azure.py",
    "*/kms/providers/gcp.py",
    "*/inspection/backends/anthropic.py",
    "*/inspection/backends/gemini.py",
    "*/inspection/backends/azure_openai.py",
    "*/chs/gpu_monitor.py",
]

[tool.bandit]
targets = ["src/yashigani"]
skips = ["B101", "B601"]   # B101=assert, B601=paramiko (not used)

[tool.mypy]
python_version = "3.12"
# Ignore missing stubs for third-party packages that don't ship them.
# We suppress [import-untyped] and [import-not-found] globally here and
# handle them per-module where finer control is needed.
ignore_missing_imports = true
# Show error codes so CI can categorise failures.
show_error_codes = true
# Do NOT enable strict — we're cleaning up a legacy codebase incrementally.
# strict = false is the default; stated explicitly for clarity.
strict = false
# Exclude generated / vendored code that we don't own.
exclude = [
    "src/yashigani/db/migrations/",
]

[tool.ruff]
# Lint configuration (ASVS 16.6.1 log-injection defence — QA Wave 2 #48).
# Keep the rule set narrow; we're not running ruff as a general formatter,
# only as a guardrail against log-injection and a handful of other
# high-value security regressions. Additional rule groups can be enabled
# later without changing the intent of this block.
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# G004: f-string used directly in a logger call — interpolates at
# log-format time, opening a log-injection / forgery vector when the
# interpolated value is attacker-controlled (usernames, agent names,
# header values). Use positional args instead: logger.info("%s", v).
# G002: use of % formatting in logger is fine (Python logging's normal form).
# G010: .warn() is deprecated in favour of .warning().
extend-select = ["G"]
